# book-fetcher

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: cache.py  config.py  database.py  main.py
app/db/: queries.py
app/models/: author.py  book.py
app/routers/: authors.py  books.py
docs/LOCUST TEST/: locust-bigdata-memory.html  locust-bigdata-nocache.html  locust-bigdata-redis.html  locust-smalldata-nocache.html
scripts/: db.py
src/book_fetcher/: __init__.py  api.py  cli.py  filter.py  writer.py
src/book_fetcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fast_api_tutorial/: db.py  main.py  models.py
tests/: locustfile_memory.py  locustfile_nocache.py  locustfile_redis.py  test_api.py
