[project]
name = "book-fetcher"
version = "0.1.0"
description = "Fetch books from OpenLibrary and save filtered results to CSV."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests", "fastapi", "uvicorn", "pydantic"]

[project.optional-dependencies]
dev = ["ruff", "black", "isort", "mypy", "types-requests", "pytest"]

[project.scripts]
book-fetcher = "book_fetcher.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ---- Tool configs ----
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
