[project]
name = "book-api"
version = "0.1.0"
description = "A high-performance book search API built with FastAPI, PostgreSQL, and Redis caching."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["fastapi", "postgresql", "redis", "api", "books"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "types-requests>=2.31.0",
    "pytest>=8.0.0",
    "locust>=2.30.0",
]

[project.scripts]
book-api = "app.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

# ========== Ruff ==========
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ========== Mypy ==========
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

# ========== Pytest ==========
[tool.pytest.ini_options]
testpaths = ["tests"]